--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,7 @@
   <span><a routerLink="/">Inicio</a></span>&nbsp;|&nbsp;
   <span><a routerLink="/alumnos">Alumnos</a></span>&nbsp;|&nbsp;
   <span><a routerLink="/materias">Materias</a></span>&nbsp;|&nbsp;
+  <span><a routerLink="/matriculas">Matrículas</a></span>&nbsp;|&nbsp;
 
     <div class="spacer"></div>
        
